--- a/eggsandbaskets/settings.yml
+++ b/eggsandbaskets/settings.yml
@@ -114,8 +114,8 @@ baseline_lite:
     R: 64.0
     T: 99.0
     alpha: 1.0
-    alpha_bar: 0.4
-    beta_bar: 0.91
+    alpha_bar: 0.7
+    beta_bar: 0.96
     beta_m: 3.0
     def_pi: 0.7
     delta_housing: 0.01
@@ -128,7 +128,7 @@ baseline_lite:
     grid_size_DC: 6.0
     grid_size_DCR: 2.0
     grid_size_H: 15
-    grid_size_HS: 15
+    grid_size_HS: 30
     grid_size_M: 15.0
     grid_size_Q: 6.0
     grid_size_Q_s: 2.0
@@ -174,7 +174,7 @@ baseline_lite:
     sigma_r_H: 0.0011
     sigma_w: 0.0221957
     tau_housing: 0.08
-    theta: 33.981013921969655
+    theta: 2
     tzero: 16.0
     v_E: 0.17
     v_S: 0.0235
