--- a/eggsandbaskets/settings/settings.yml
+++ b/eggsandbaskets/settings/settings.yml
@@ -97,85 +97,85 @@ baseline_lite:
     A_max_W: 20.0
     A_max_WE: 50.0
     A_max_WW: 30.0
-    A_min: 1.0e-5
-    A_min_W: 1.0e-05
+    A_min: 1.0e-1
+    A_min_W: 1.0e-1
     C_max: 7.0
-    C_min: 1.0e-10
+    C_min: 1.0e-2
     DC_max: 20.0
     DC_min: .1
-    H_max: 12
-    HS_max: 12
-    H_min: 1.0e-5
+    H_max: 16
+    HS_max: 16
+    H_min: 1.0e-1
     ID: 188198904234
-    M_max: 5.0
+    M_max: 7.0
     M_min: 0.0
-    Q_max: 1.25
-    Q_min: 0.5
+    Q_max: 1.35
+    Q_min: 0.1
     R: 64.0
     T: 99.0
     alpha: 1.0
     alpha_bar: 0.696338
-    beta_bar: 0.99
-    beta_m: 1
+    beta_bar: 0.96
+    beta_m: 3.35
     r_m: .0614
     def_pi: 0.7
     delta_housing: 0.01
     f_ACF: 0.8625
     f_ASF: 1.0
     f_LSF: 0.23
-    gamma: 1.3
+    gamma: 2.98
     grid_size_A: 15.0
     grid_size_C: 15.0
-    grid_size_DC: 6.0
+    grid_size_DC: 9.0
     grid_size_DCR: 2.0
     grid_size_H: 15.0
-    grid_size_HS: 30
-    grid_size_M: 15.0
+    grid_size_HS: 30.0
+    grid_size_M: 9.0
     grid_size_Q: 6.0
     grid_size_Q_s: 3.0
-    grid_size_W: 2.0
+    grid_size_W: 3.0
     grid_size_alpha: 1.0
     grid_size_beta: 1.0
     h: 1.68
     k: 2.64169
-    kappa_m: 0
+    kappa_m: 0.25
     l: 0.54
-    nu_p_0: 12
+    nu_p_0: -1.876
     nu_p_1: -0.112
     nu_p_2: 0.000875
-    nu_r_0: 12
+    nu_r_0: -6.788
     nu_r_1: -0.033
     nu_r_2: 0.0001308
     nu_r_3: 0.109
     nu_r_4: 2.108
-    nu_v_0: 12
-    nu_v_1: 41.62 
-    nu_v_2: -0.00102
+    nu_v_0: -2.175
+    nu_v_1: 48.531
+    nu_v_2: -0.001018
     nu_v_3: -0.34
-    phi_c: 0.2
-    phi_r: .06
-    phi_d: 0.2
+    phi_c: 0.25
+    phi_r: .05
+    phi_d: 0.25
     phi_w: 0.4044149
-    psi: 1000
+    psi: -1
     r: 0.025
     r_H: 0.032
     r_h: 0.0476
     r_l: 0.0193
-    rho: -1.0
+    rho: .1
     rho_alpha: 0.126099 
     rho_beta: 0.2834749347431
-    sigma_DB_V: .0001
-    sigma_DB_pi: .0001
-    sigma_DC_V: .0001
-    sigma_DC_pi: .0001
+    sigma_DB_V: .000582
+    sigma_DB_pi: 0.003022
+    sigma_DC_V: .000718
+    sigma_DC_pi: 0.001351
     sigma_alpha: 0.004177598740390481
     sigma_beta: 0.00002
     sigma_d: 0.064
-    sigma_plan: .0001
+    sigma_plan: 0.013
     sigma_r_H: 0.0011
     sigma_w: 0.0221957
     tau_housing: 0.08
-    theta: 300
+    theta: 216
     tzero: 16.0
     v_E: 0.17
     v_S: 0.0235
@@ -286,9 +286,597 @@ baseline_lite:
   - 0.0
   vol_cont_points:
   - 0.0
-  - 0.01
-  - 0.18
   - 0.034
+  - 0.18
   normalisation:
   - 1
   - .00001
+male:
+  lambdas:
+  - 9.3727655
+  - 0.1090508
+  - -0.00293958
+  - 4.127e-05
+  - -2.334e-07
+  - 0.01516798
+  - -0.00012572
+  parameter_description:
+    A_max_R: Maximum liquid assets for retirees
+    A_max_W: Maximum liquid assets for workers
+    A_max_WE: Max  total wealth for retirees
+    A_max_WW: Max total wealth for retirees
+    A_min: Min liquid assets
+    A_min_W: min wealth for workers
+    C_max: 'Max consumption'
+    C_min: 'Min consumption'
+    DC_max: Naximum pension assets M
+    DC_min: Min pension assets
+    H_max: 'Maxumum housing assets'
+    HS_max: 'Maximum for housing services'
+    H_min: 'Min housing assets '
+    M_max: 'max mnortgage share '
+    M_min: min mortgage share
+    Q_max: 'Max house price '
+    Q_min: Min house price
+    R: Retirement age -1
+    T: Age of certain death -1
+    alpha: 'Standard contribution DC share parameter '
+    alpha_bar: 'Mean of housing preference shock'
+    beta_bar: 'Mean of time preference shock'
+    beta_m: mortgage rate mark-up
+    def_pi: Default DC portolio risk share
+    delta_housing: ' Depreciation rate for housing '
+    f_ACF: Average contribution factor
+    f_ASF: Average service factor
+    f_LSF: ''
+    gamma: Risk aversion parameter in utility
+    grid_size_A: Grid side for non-pensions liquid assets
+    grid_size_C: 'Grid size for consumption'
+    grid_size_DC: Grid size of pension wealth in DC
+    grid_size_DCR: 'Size of DC pension asset process grid '
+    grid_size_H: Grid size for housing wealth
+    grid_size_HS: Grid size for housing services 
+    grid_size_M: 'Grid size for mortgages'
+    grid_size_Q: 'Size of the house price grid '
+    grid_size_Q_s: Size of the house price shock grid (seems that we cannot have more
+      of these than Q points)
+    grid_size_W: 'Size of the wage shock process '
+    grid_size_alpha: 'Number of points in alpha shock process'
+    grid_size_beta: 'Number of points in beta shock process'
+    h: 'Scaling factor for high risk pension asset'
+    k: Bequest curvature
+    kappa_m: scaling factor for mortgage rate
+    l: 'Scaling factor for low risk pension asset '
+    nu_p_0: 'Adj. cost parameter for pension plan'
+    nu_p_1: 'Adj. cost parameter for pension plan'
+    nu_p_2: 'Adj. cost parameter for pension plan'
+    nu_r_0: 'Adj. cost parameter for risk share'
+    nu_r_1: 'Adj. cost parameter for risk share'
+    nu_r_2: 'Adj. cost parameter for risk share'
+    nu_r_3: 'Adj. cost parameter for risk share'
+    nu_r_4: 'Adj. cost parameter for risk share'
+    nu_v_0: 'Adj. cost parameter for Vol. cont share'
+    nu_v_1: 'Adj. cost parameter for Vol. cont share'
+    nu_v_2: 'Adj. cost parameter for Vol. cont share'
+    nu_v_3: 'Adj. cost parameter for Vol. cont share'
+    phi_c:  'Homeowner deposit rate'
+    phi_d: 'rRepayment to income ratio '
+    phi_w: 'Wage shock persistence '
+    psi: 'default preference parmater'
+    r: 'Rate of return on risk-free liquid asset (percent points/100)'
+    r_H: 'Housing rate of return mean (percent points/100)'
+    r_h: 'Mean rate of return risky DC pension asset (percent points/100)'
+    r_l: 'Mean rate of return safe  DC pension asset (percent points/100)'
+    rho: Elasticity of substitution between housing and consumption
+    rho_alpha: 'Persistence in log alpha process'
+    rho_beta: 'Persistence in log beta process'
+    sigma_DB_V: Scale parameter for voluntary contributions Type 1 evd
+    sigma_DB_pi: Scale parameter for risky assets contributions Type 1 evd
+    sigma_DC_V: Scale parameter for voluntary contributions Type 1 evd
+    sigma_DC_pi: Scale parameter for risky assets contributions Type 1 evd
+    sigma_alpha: 'Standard deviatio of log alpha process'
+    sigma_beta: 'Standard deviatio of log beta process'
+    sigma_d: 'Variance of default share pension asset (log) returns process' 
+    sigma_plan: Scale DB vs DC
+    sigma_r_H: 'Standard deviation of the housing rate of return (not in logs)'
+    sigma_w: 'Standard deviation of wage uncertainty shock'
+    tau_housing: 'Housing adjustment cost parameter '
+    theta: 'Bequest theta '
+    tzero: Enrollment age -1
+    v_E: 'Employer contribution rate '
+    v_S: Standard member  contributions rate
+  parameters:
+    A_max_R: 30.0
+    A_max_W: 20.0
+    A_max_WE: 50.0
+    A_max_WW: 30.0
+    A_min: 1.0e-1
+    A_min_W: 1.0e-1
+    C_max: 7.0
+    C_min: 1.0e-2
+    DC_max: 20.0
+    DC_min: .1
+    H_max: 16
+    HS_max: 16
+    H_min: 1.0e-1
+    ID: 188198904234
+    M_max: 7.0
+    M_min: 0.0
+    Q_max: 1.35
+    Q_min: 0.1
+    R: 64.0
+    T: 99.0
+    alpha: 1.0
+    alpha_bar: 0.696338
+    beta_bar: 0.96
+    beta_m: 1
+    r_m: .0614
+    def_pi: 0.7
+    delta_housing: 0.01
+    f_ACF: 0.8625
+    f_ASF: 1.0
+    f_LSF: 0.23
+    gamma: 2.98
+    grid_size_A: 15.0
+    grid_size_C: 15.0
+    grid_size_DC: 9.0
+    grid_size_DCR: 2.0
+    grid_size_H: 15.0
+    grid_size_HS: 30.0
+    grid_size_M: 9.0
+    grid_size_Q: 6.0
+    grid_size_Q_s: 3.0
+    grid_size_W: 3.0
+    grid_size_alpha: 1.0
+    grid_size_beta: 1.0
+    h: 1.68
+    k: 2.64169
+    kappa_m: 0.25
+    l: 0.54
+    nu_p_0: -1.876
+    nu_p_1: -0.112
+    nu_p_2: 0.000875
+    nu_r_0: -6.788
+    nu_r_1: -0.033
+    nu_r_2: 0.0001308
+    nu_r_3: 0.109
+    nu_r_4: 2.108
+    nu_v_0: -2.175
+    nu_v_1: 48.531
+    nu_v_2: -0.001018
+    nu_v_3: -0.34
+    phi_c: 0.25
+    phi_r: .05
+    phi_d: 0.25
+    phi_w: 0.4044149
+    psi: -1
+    r: 0.025
+    r_H: 0.032
+    r_h: 0.0476
+    r_l: 0.0193
+    rho: -1.0
+    rho_alpha: 0.126099 
+    rho_beta: 0.2834749347431
+    sigma_DB_V: .000582
+    sigma_DB_pi: 0.003022
+    sigma_DC_V: .000718
+    sigma_DC_pi: 0.001351
+    sigma_alpha: 0.004177598740390481
+    sigma_beta: 0.00002
+    sigma_d: 0.064
+    sigma_plan: 0.013
+    sigma_r_H: 0.0011
+    sigma_w: 0.0221957
+    tau_housing: 0.08
+    theta: 216
+    tzero: 16.0
+    v_E: 0.17
+    v_S: 0.0235
+  risk_share_points:
+  - 0.0
+  - 0.7
+  - 1.0
+  survival:
+  - 0.995905
+  - 0.99971
+  - 0.99982
+  - 0.999855
+  - 0.9999
+  - 0.999885
+  - 0.999855
+  - 0.999915
+  - 0.999865
+  - 0.999935
+  - 0.999905
+  - 0.99993
+  - 0.999915
+  - 0.99989
+  - 0.999835
+  - 0.9998
+  - 0.999695
+  - 0.999565
+  - 0.999465
+  - 0.99943
+  - 0.999385
+  - 0.999375
+  - 0.99946
+  - 0.99941
+  - 0.99939
+  - 0.999375
+  - 0.99936
+  - 0.999335
+  - 0.9994
+  - 0.999205
+  - 0.999275
+  - 0.99919
+  - 0.9991
+  - 0.99903
+  - 0.999
+  - 0.998945
+  - 0.9989
+  - 0.998805
+  - 0.9987
+  - 0.99873
+  - 0.99861
+  - 0.99862
+  - 0.99845
+  - 0.99819
+  - 0.998245
+  - 0.998055
+  - 0.99785
+  - 0.99778
+  - 0.99746
+  - 0.9974
+  - 0.99702
+  - 0.996775
+  - 0.99664
+  - 0.996435
+  - 0.99598
+  - 0.99549
+  - 0.99528
+  - 0.994855
+  - 0.994575
+  - 0.99414
+  - 0.99325
+  - 0.992825
+  - 0.99216
+  - 0.991745
+  - 0.99088
+  - 0.98953
+  - 0.98888
+  - 0.987475
+  - 0.986245
+  - 0.98494
+  - 0.982755
+  - 0.981495
+  - 0.979795
+  - 0.97724
+  - 0.97517
+  - 0.97161
+  - 0.9693
+  - 0.96521
+  - 0.96062
+  - 0.955655
+  - 0.950075
+  - 0.94398
+  - 0.93554
+  - 0.926915
+  - 0.918595
+  - 0.909875
+  - 0.896755
+  - 0.886295
+  - 0.87407
+  - 0.859885
+  - 0.83792
+  - 0.824475
+  - 0.800655
+  - 0.780865
+  - 0.75574
+  - 0.74289
+  - 0.720915
+  - 0.69844
+  - 0.67567
+  - 0.0
+  vol_cont_points:
+  - 0.0
+  - 0.034
+  - 0.18
+  normalisation:
+  - 1
+  - .00001
+
+female:
+  lambdas:
+  - 4.7651949
+  - 0.57802016
+  - -0.02022858
+  - 0.00030696
+  - -1.71E-06
+  - 0.0241546
+  - -0.00011022
+  parameter_description:
+    A_max_R: Maximum liquid assets for retirees
+    A_max_W: Maximum liquid assets for workers
+    A_max_WE: Max  total wealth for retirees
+    A_max_WW: Max total wealth for retirees
+    A_min: Min liquid assets
+    A_min_W: min wealth for workers
+    C_max: 'Max consumption'
+    C_min: 'Min consumption'
+    DC_max: Naximum pension assets M
+    DC_min: Min pension assets
+    H_max: 'Maxumum housing assets'
+    HS_max: 'Maximum for housing services'
+    H_min: 'Min housing assets '
+    M_max: 'max mnortgage share '
+    M_min: min mortgage share
+    Q_max: 'Max house price '
+    Q_min: Min house price
+    R: Retirement age -1
+    T: Age of certain death -1
+    alpha: 'Standard contribution DC share parameter '
+    alpha_bar: 'Mean of housing preference shock'
+    beta_bar: 'Mean of time preference shock'
+    beta_m: mortgage rate mark-up
+    def_pi: Default DC portolio risk share
+    delta_housing: ' Depreciation rate for housing '
+    f_ACF: Average contribution factor
+    f_ASF: Average service factor
+    f_LSF: ''
+    gamma: Risk aversion parameter in utility
+    grid_size_A: Grid side for non-pensions liquid assets
+    grid_size_C: 'Grid size for consumption'
+    grid_size_DC: Grid size of pension wealth in DC
+    grid_size_DCR: 'Size of DC pension asset process grid '
+    grid_size_H: Grid size for housing wealth
+    grid_size_HS: Grid size for housing services 
+    grid_size_M: 'Grid size for mortgages'
+    grid_size_Q: 'Size of the house price grid '
+    grid_size_Q_s: Size of the house price shock grid (seems that we cannot have more
+      of these than Q points)
+    grid_size_W: 'Size of the wage shock process '
+    grid_size_alpha: 'Number of points in alpha shock process'
+    grid_size_beta: 'Number of points in beta shock process'
+    h: 'Scaling factor for high risk pension asset'
+    k: Bequest curvature
+    kappa_m: scaling factor for mortgage rate
+    l: 'Scaling factor for low risk pension asset '
+    nu_p_0: 'Adj. cost parameter for pension plan'
+    nu_p_1: 'Adj. cost parameter for pension plan'
+    nu_p_2: 'Adj. cost parameter for pension plan'
+    nu_r_0: 'Adj. cost parameter for risk share'
+    nu_r_1: 'Adj. cost parameter for risk share'
+    nu_r_2: 'Adj. cost parameter for risk share'
+    nu_r_3: 'Adj. cost parameter for risk share'
+    nu_r_4: 'Adj. cost parameter for risk share'
+    nu_v_0: 'Adj. cost parameter for Vol. cont share'
+    nu_v_1: 'Adj. cost parameter for Vol. cont share'
+    nu_v_2: 'Adj. cost parameter for Vol. cont share'
+    nu_v_3: 'Adj. cost parameter for Vol. cont share'
+    phi_c:  'Homeowner deposit rate'
+    phi_d: 'rRepayment to income ratio '
+    phi_w: 'Wage shock persistence '
+    psi: 'default preference parmater'
+    r: 'Rate of return on risk-free liquid asset (percent points/100)'
+    r_H: 'Housing rate of return mean (percent points/100)'
+    r_h: 'Mean rate of return risky DC pension asset (percent points/100)'
+    r_l: 'Mean rate of return safe  DC pension asset (percent points/100)'
+    rho: Elasticity of substitution between housing and consumption
+    rho_alpha: 'Persistence in log alpha process'
+    rho_beta: 'Persistence in log beta process'
+    sigma_DB_V: Scale parameter for voluntary contributions Type 1 evd
+    sigma_DB_pi: Scale parameter for risky assets contributions Type 1 evd
+    sigma_DC_V: Scale parameter for voluntary contributions Type 1 evd
+    sigma_DC_pi: Scale parameter for risky assets contributions Type 1 evd
+    sigma_alpha: 'Standard deviatio of log alpha process'
+    sigma_beta: 'Standard deviatio of log beta process'
+    sigma_d: 'Variance of default share pension asset (log) returns process' 
+    sigma_plan: Scale DB vs DC
+    sigma_r_H: 'Standard deviation of the housing rate of return (not in logs)'
+    sigma_w: 'Standard deviation of wage uncertainty shock'
+    tau_housing: 'Housing adjustment cost parameter '
+    theta: 'Bequest theta '
+    tzero: Enrollment age -1
+    v_E: 'Employer contribution rate '
+    v_S: Standard member  contributions rate
+  parameters:
+    A_max_R: 30.0
+    A_max_W: 20.0
+    A_max_WE: 50.0
+    A_max_WW: 30.0
+    A_min: 1.0e-1
+    A_min_W: 1.0e-1
+    C_max: 7.0
+    C_min: 1.0e-2
+    DC_max: 20.0
+    DC_min: .1
+    H_max: 16
+    HS_max: 16
+    H_min: 1.0e-1
+    ID: 188198904234
+    M_max: 7.0
+    M_min: 0.0
+    Q_max: 1.35
+    Q_min: 0.1
+    R: 64.0
+    T: 99.0
+    alpha: 1.0
+    alpha_bar: 0.696338
+    beta_bar: 0.96
+    beta_m: 1
+    r_m: .0614
+    def_pi: 0.7
+    delta_housing: 0.01
+    f_ACF: 0.8625
+    f_ASF: 1.0
+    f_LSF: 0.23
+    gamma: 2.98
+    grid_size_A: 15.0
+    grid_size_C: 15.0
+    grid_size_DC: 9.0
+    grid_size_DCR: 2.0
+    grid_size_H: 15.0
+    grid_size_HS: 30.0
+    grid_size_M: 9.0
+    grid_size_Q: 6.0
+    grid_size_Q_s: 3.0
+    grid_size_W: 3.0
+    grid_size_alpha: 1.0
+    grid_size_beta: 1.0
+    h: 1.68
+    k: 2.64169
+    kappa_m: 0.25
+    l: 0.54
+    nu_p_0: -1.876
+    nu_p_1: -0.112
+    nu_p_2: 0.000875
+    nu_r_0: -6.788
+    nu_r_1: -0.033
+    nu_r_2: 0.0001308
+    nu_r_3: 0.109
+    nu_r_4: 2.108
+    nu_v_0: -2.175
+    nu_v_1: 48.531
+    nu_v_2: -0.001018
+    nu_v_3: -0.34
+    phi_c: 0.25
+    phi_r: .05
+    phi_d: 0.25
+    phi_w: 0.4044149
+    psi: -1
+    r: 0.025
+    r_H: 0.032
+    r_h: 0.0476
+    r_l: 0.0193
+    rho: -1.0
+    rho_alpha: 0.126099 
+    rho_beta: 0.2834749347431
+    sigma_DB_V: .000582
+    sigma_DB_pi: 0.003022
+    sigma_DC_V: .000718
+    sigma_DC_pi: 0.001351
+    sigma_alpha: 0.004177598740390481
+    sigma_beta: 0.00002
+    sigma_d: 0.064
+    sigma_plan: 0.013
+    sigma_r_H: 0.0011
+    sigma_w: 0.0221957
+    tau_housing: 0.08
+    theta: 216
+    tzero: 16.0
+    v_E: 0.17
+    v_S: 0.0235
+  risk_share_points:
+    - 0.0
+    - 0.7
+    - 1.0
+  survival:
+  - 0.99664
+  - 0.999765
+  - 0.99983
+  - 0.999905
+  - 0.999895
+  - 0.999905
+  - 0.999915
+  - 0.99991
+  - 0.99992
+  - 0.999905
+  - 0.999935
+  - 0.999925
+  - 0.999945
+  - 0.99991
+  - 0.99989
+  - 0.999855
+  - 0.999805
+  - 0.999765
+  - 0.999775
+  - 0.999765
+  - 0.99975
+  - 0.999755
+  - 0.999745
+  - 0.999755
+  - 0.999725
+  - 0.999695
+  - 0.999695
+  - 0.99973
+  - 0.99968
+  - 0.99966
+  - 0.999655
+  - 0.99963
+  - 0.99958
+  - 0.999585
+  - 0.999545
+  - 0.99949
+  - 0.999455
+  - 0.99945
+  - 0.99933
+  - 0.999245
+  - 0.999235
+  - 0.999155
+  - 0.99914
+  - 0.99906
+  - 0.99894
+  - 0.99889
+  - 0.998595
+  - 0.99861
+  - 0.998595
+  - 0.998315
+  - 0.998315
+  - 0.998155
+  - 0.997775
+  - 0.997775
+  - 0.997615
+  - 0.997255
+  - 0.9972
+  - 0.99697
+  - 0.99668
+  - 0.996345
+  - 0.99613
+  - 0.99582
+  - 0.995255
+  - 0.994755
+  - 0.99429
+  - 0.99407
+  - 0.993195
+  - 0.992425
+  - 0.9922
+  - 0.9908
+  - 0.98951
+  - 0.988105
+  - 0.987335
+  - 0.985915
+  - 0.98402
+  - 0.981765
+  - 0.9803
+  - 0.977435
+  - 0.97474
+  - 0.97202
+  - 0.966175
+  - 0.96329
+  - 0.9571
+  - 0.95064
+  - 0.942615
+  - 0.935305
+  - 0.92512
+  - 0.91562
+  - 0.902475
+  - 0.889625
+  - 0.87264
+  - 0.85644
+  - 0.83964
+  - 0.822195
+  - 0.79847
+  - 0.77789
+  - 0.75479
+  - 0.73073
+  - 0.705965
+  - 0
+  vol_cont_points:
+  - 0.0
+  - 0.034
+  - 0.18
+  normalisation:
+  - 1
+  - .00001
+
+
