--- a/eggsandbaskets/settings/settings.yml
+++ b/eggsandbaskets/settings/settings.yml
@@ -107,7 +107,7 @@ baseline_lite:
     HS_max: 16
     H_min: 1.0e-1
     ID: 188198904234
-    M_max: 7.0
+    M_max: 0.8
     M_min: 0.0
     Q_max: 1.35
     Q_min: 0.1
@@ -124,11 +124,11 @@ baseline_lite:
     f_ASF: 1.0
     f_LSF: 0.23
     gamma: 2.98
-    grid_size_A: 15.0
+    grid_size_A: 20.0
     grid_size_C: 15.0
     grid_size_DC: 9.0
     grid_size_DCR: 2.0
-    grid_size_H: 15.0
+    grid_size_H: 20.0
     grid_size_HS: 15.0
     grid_size_M: 9.0
     grid_size_Q: 6.0
@@ -388,26 +388,26 @@ male:
   parameters:
     A_max_R: 30.0
     A_max_W: 20.0
-    A_max_WE: 50.0
+    A_max_WE: 30.0
     A_max_WW: 30.0
-    A_min: 1.0e-1
-    A_min_W: 1.0e-1
-    C_max: 5.0
-    C_min: 5.0e-02
+    A_min: 1.0e-05
+    A_min_W: 1.0e-05
+    C_max: 15.0
+    C_min: 5.0e-08
     DC_max: 20.0
     DC_min: .1
     H_max: 16
     HS_max: 16
     H_min: 1.0e-2
     ID: 188198904234
-    M_max: 7.0
+    M_max: 0.8
     M_min: 0.0
     Q_max: 1.35
     Q_min: 0.1
     R: 64.0
     T: 99.0
     alpha: 1.0
-    alpha_bar: 0.3
+    alpha_bar: 0.4
     beta_bar: 0.91
     beta_m: 1
     r_m: .0614
@@ -416,7 +416,7 @@ male:
     f_ACF: 0.8625
     f_ASF: 1.0
     f_LSF: 0.23
-    gamma: 4
+    gamma: 3.3
     grid_size_A: 15.0
     grid_size_C: 15.0
     grid_size_DC: 9.0
@@ -427,7 +427,7 @@ male:
     grid_size_Q: 6.0
     grid_size_Q_s: 3.0
     grid_size_W: 3.0
-    grid_size_alpha: 2.0
+    grid_size_alpha: 1.0
     grid_size_beta: 2.0
     h: 1.68
     k: 2.64169
@@ -454,21 +454,21 @@ male:
     r_H: 0.032
     r_h: 0.0476
     r_l: 0.0193
-    rho: .3
+    rho: .05
     rho_alpha: 0.8
     rho_beta: 0.8
     sigma_DB_V: .000322
     sigma_DB_pi: 0.3022
     sigma_DC_V: .0003022
     sigma_DC_pi: 0.1351
-    sigma_alpha: 0.04
-    sigma_beta: 0.04
+    sigma_alpha: 0.02
+    sigma_beta: 0.02
     sigma_d: 0.064
-    sigma_plan: 4.127e+10
+    sigma_plan: .2
     sigma_r_H: 0.042
     sigma_w: 0.0221957
-    tau_housing: 0.15
-    theta: 10
+    tau_housing: 0.08
+    theta: 8
     tzero: 16.0
     v_E: 0.17
     v_S: 0.0235
@@ -576,7 +576,7 @@ male:
   - 0.720915
   - 0.69844
   - 0.67567
-  - 0.0
+  - 0.00001
   vol_cont_points:
   - 0.0
   - 0.01
@@ -696,7 +696,7 @@ female:
     HS_max: 16
     H_min: 1.0e-1
     ID: 188198904234
-    M_max: 7.0
+    M_max: 0.8
     M_min: 0.0
     Q_max: 1.35
     Q_min: 0.1
@@ -713,16 +713,16 @@ female:
     f_ASF: 1.0
     f_LSF: 0.23
     gamma: 2.98
-    grid_size_A: 20.0
+    grid_size_A: 15.0
     grid_size_C: 15.0
     grid_size_DC: 9.0
     grid_size_DCR: 2.0
-    grid_size_H: 20.0
+    grid_size_H: 15.0
     grid_size_HS: 20.0
     grid_size_M: 9.0
     grid_size_Q: 9.0
     grid_size_Q_s: 3.0
-    grid_size_W: 3.0
+    grid_size_W: 2.0
     grid_size_alpha: 2.0
     grid_size_beta: 2.0
     h: 1.68
